dist/1.0/bin/sample/retrieveUnpackaged/objects/OrderLine__c.object
<CustomObject>
    <description>Order Lines</description>
    <fields>
        <fullName>A_End_Contact__c</fullName>
        <description>Customer&apos;s Contact for A-End location</description>
        <inlineHelpText>Customer&apos;s Contact for A-End location</inlineHelpText>
        <label>A-End Contact (lookup)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Lines (A-End Contact (lookup))</relationshipLabel>
        <relationshipName>Order_Lines6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>A_End_Interface__c</fullName>
        <description>Interface configured for A-End location</description>
        <inlineHelpText>Interface configured for A-End location</inlineHelpText>
        <label>A-End Interface</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End_Medium__c</fullName>
        <description>Medium configured for A-End location</description>
        <inlineHelpText>Medium configured for A-End location</inlineHelpText>
        <label>A-End Medium</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_End__c</fullName>
        <description>A-End address taken from Attributes configured under Order Line</description>
        <inlineHelpText>A-End address taken from Attributes configured under Order Line</inlineHelpText>
        <label>A-End</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Acceptance_Protocol_Signed__c</fullName>
        <description>Date, when Acceptance Protocol was signed</description>
        <inlineHelpText>Date, when Acceptance Protocol was signed</inlineHelpText>
        <label>Acceptance Protocol Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acceptance_Protocol__c</fullName>
        <description>Acceptance Protocol which was created for this Order Line</description>
        <inlineHelpText>Acceptance Protocol which was created for this Order Line</inlineHelpText>
        <label>Acceptance Protocol</label>
        <referenceTo>Acceptance_Protocol__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Name of the Account (taken from Account assigned to related Order)</description>
        <formula>OrderLookup__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the Account</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account, for which this Order Line was created</description>
        <inlineHelpText>Account, for which this Order Line was created</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Lines (Account)</relationshipLabel>
        <relationshipName>Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounts_Contact__c</fullName>
        <description>Contact person representing the Account for installed / modified Service</description>
        <inlineHelpText>Contact person representing the Account for installed / modified Service</inlineHelpText>
        <label>Account&apos;s Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Lines (Account&apos;s Contact)</relationshipLabel>
        <relationshipName>Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that Special Offer is Active for selection</description>
        <inlineHelpText>Indicates that Special Offer is Active for selection</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Billing_Start__c</fullName>
        <description>Indicates actual Date, when billing for this Order Line started</description>
        <inlineHelpText>Indicates actual Date, when billing for this Order Line started</inlineHelpText>
        <label>Actual Billing Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Provisioning_End__c</fullName>
        <description>Indicates actual Date, when provisioning for this Order Line completed</description>
        <inlineHelpText>Indicates actual Date, when provisioning for this Order Line completed</inlineHelpText>
        <label>Actual Provisioning End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Provisioning_Start__c</fullName>
        <description>Indicates actual Date, when provisioning for this Order Line started</description>
        <inlineHelpText>Indicates actual Date, when provisioning for this Order Line started</inlineHelpText>
        <label>Actual Provisioning Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Project_Manager_Email__c</fullName>
        <description>Email Address of Assigned Project Manager
Created for PROV_PL_034 Postponing of disconnection date</description>
        <inlineHelpText>Email Address of Assigned Project Manager</inlineHelpText>
        <label>Assigned Project Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_Project_Manger__c</fullName>
        <description>Project Manager assigned to manage Provisioning for this Order Line (taken from Assigned Project Manager field on Order)</description>
        <formula>OrderLookup__r.Assigned_Project_Manager__r.FirstName+&quot; &quot;+OrderLookup__r.Assigned_Project_Manager__r.LastName</formula>
        <inlineHelpText>Project Manager assigned to manage Provisioning for this Order Line</inlineHelpText>
        <label>Assigned Project Manger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Provisioning_Plan__c</fullName>
        <description>Provisioning Plan assigned to this Line</description>
        <inlineHelpText>Provisioning Plan assigned to this Line</inlineHelpText>
        <label>Assigned Provisioning Plan</label>
        <referenceTo>Provisioning_Plan__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Assign_PP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Assign PP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Submit_PP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Submit PP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B_End_Contact__c</fullName>
        <description>Customer&apos;s Contact for B-End location</description>
        <inlineHelpText>Customer&apos;s Contact for B-End location</inlineHelpText>
        <label>B End Contact</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_End__c</fullName>
        <description>B-End address taken from Attributes configured under Order Line</description>
        <inlineHelpText>B-End address taken from Attributes configured under Order Line</inlineHelpText>
        <label>B-End</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bandwidth__c</fullName>
        <description>Bandwidth configured within Attributes under this Line</description>
        <inlineHelpText>Bandwidth configured within Attributes under this Line</inlineHelpText>
        <label>Bandwidth</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bandwidth_converted__c</fullName>
        <description>Bandwidth converted to numeric value</description>
        <inlineHelpText>Bandwidth converted to numeric value</inlineHelpText>
        <label>Bandwidth converted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <description>Billing Account under which modified Service Bundle is installed</description>
        <inlineHelpText>Billing Account under which modified Service Bundle is installed</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>Billing_Accounts__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_ID__c</fullName>
        <description>ID of installed / modified Bundle in Billing System</description>
        <inlineHelpText>ID of installed / modified Bundle in Billing System</inlineHelpText>
        <label>Billing ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Label__c</fullName>
        <description>Label of the Bundle taken from it&apos;s Definition</description>
        <formula>&apos;a&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Label of the Bundle taken from it&apos;s Definition</inlineHelpText>
        <label>Bundle Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Special_Offer__c</fullName>
        <description>Relation to Bundle for the Special Offer Order Line</description>
        <inlineHelpText>Relation to Bundle for the Special Offer Order Line</inlineHelpText>
        <label>Bundle Special Offer</label>
        <referenceTo>CProduct__c</referenceTo>
        <relationshipLabel>Special Offers</relationshipLabel>
        <relationshipName>SpecialOffers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <description>indicated Business Hours definition, that should be used for planning Tasks under this Line (taken from Business Hours related to Order)</description>
        <formula>OrderLookup__r.Business_Hours__c</formula>
        <inlineHelpText>indicated Business Hours definition, that should be used for planning Tasks under this Line</inlineHelpText>
        <label>Business Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CContract__c</fullName>
        <description>Contract related to this Order Line</description>
        <inlineHelpText>Contract related to this Order Line</inlineHelpText>
        <label>Contract (custom)</label>
        <referenceTo>CContract__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CProduct__c</fullName>
        <description>Indicates Bundle Definition of modified / installed Service</description>
        <inlineHelpText>Indicates Bundle Definition of modified / installed Service</inlineHelpText>
        <label>Bundle</label>
        <referenceTo>CProduct__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSR_ID__c</fullName>
        <description>ID of installed / modified Service in CSR Database</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of installed / modified Service in CSR Database</inlineHelpText>
        <label>CSR ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculation_Number__c</fullName>
        <description>Number of Calculation in CBCT</description>
        <inlineHelpText>Number of Calculation in CBCT</inlineHelpText>
        <label>Calculation Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_By__c</fullName>
        <description>User who started Order Line cancellation</description>
        <inlineHelpText>User who started Order Line cancellation</inlineHelpText>
        <label>Cancelled By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <description>Date when the Order Line has been cancelled</description>
        <inlineHelpText>Date when the Order Line has been cancelled</inlineHelpText>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capex_One_off_Awaiting_Provisioning__c</fullName>
        <description>Value of Capex One-off in Awaiting Provisioning status</description>
        <inlineHelpText>Value of Capex One-off in Awaiting Provisioning status</inlineHelpText>
        <label>Capex One-off Awaiting Provisioning</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_One_off_Cancelled__c</fullName>
        <description>Value of Capex One-off in Cancelled status</description>
        <inlineHelpText>Value of Capex One-off in Cancelled status</inlineHelpText>
        <label>Capex One-off Cancelled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_One_off_Configured__c</fullName>
        <description>The field contains the value of the Capex One-off when the OL has been created or updated and still had Configured status</description>
        <inlineHelpText>The field contains the value of the Capex One-off when the OL has been created or updated and still had Configured status</inlineHelpText>
        <label>Capex One-off Configured</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_One_off_NEW__c</fullName>
        <description>The field contains the value of the Capex One-off when the OL has been created or updated and still had new status.</description>
        <inlineHelpText>The field contains the value of the Capex One-off when the OL has been created or updated and still had new status.</inlineHelpText>
        <label>Capex One-off_NEW</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_One_off_Rollback__c</fullName>
        <description>Value of Capex One-off during Rollback</description>
        <inlineHelpText>Value of Capex One-off during Rollback</inlineHelpText>
        <label>Capex One-off Rollback</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_One_off_Submi__c</fullName>
        <description>Value of Capex One-off during Submitted Status</description>
        <inlineHelpText>Value of Capex One-off during Submitted Status</inlineHelpText>
        <label>Capex One off Submited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_One_off__c</fullName>
        <description>Value of Capex One-off</description>
        <inlineHelpText>Value of Capex One-off</inlineHelpText>
        <label>Capex One-off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_Reuseable_Awaiting_Provisioning__c</fullName>
        <description>Value of Capex Reuseable in Awaiting Provisioning status</description>
        <inlineHelpText>Value of Capex Reuseable in Awaiting Provisioning status</inlineHelpText>
        <label>Capex Reuseable Awaiting Provisioning</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_Reuseable_Cancelled__c</fullName>
        <description>Value of Capex Reuseable in Cancelled status</description>
        <inlineHelpText>Value of Capex Reuseable in Cancelled status</inlineHelpText>
        <label>Capex Reuseable Cancelled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_Reuseable_Configured__c</fullName>
        <description>The field contains the value of the Capex OReusable when the OL has been updated and still had status Configured</description>
        <inlineHelpText>The field contains the value of the Capex OReusable when the OL has been updated and still had status Configured</inlineHelpText>
        <label>Capex Reuseable Configured</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_Reuseable_NEW__c</fullName>
        <description>The field contains the value of the Capex Reuseable when the OL has been created or updated and still had new status.</description>
        <inlineHelpText>The field contains the value of the Capex Reuseable when the OL has been created or updated and still had new status.</inlineHelpText>
        <label>Capex Reuseable_NEW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_Reuseable_Rollback__c</fullName>
        <description>Value of Capex Reuseable during Rollback</description>
        <inlineHelpText>Value of Capex Reuseable during Rollback</inlineHelpText>
        <label>Capex Reuseable Rollback</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_Reuseable_Submited__c</fullName>
        <description>Value of Capex Reuseable in Submitted status</description>
        <inlineHelpText>Value of Capex Reuseable in Submitted status</inlineHelpText>
        <label>Capex Reuseable Submited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_Reuseable__c</fullName>
        <description>Value of Capex Reuseable</description>
        <inlineHelpText>Value of Capex Reuseable</inlineHelpText>
        <label>Capex Reuseable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Circuit_ID__c</fullName>
        <description>Circuit ID assigned to installed / modified Service</description>
        <externalId>true</externalId>
        <inlineHelpText>Circuit ID assigned to installed / modified Service</inlineHelpText>
        <label>Circuit ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Id_OSS_Link__c</fullName>
        <description>con3:
HYPERLINK(&apos;http://dione1.gtsgroup.cz/sand_box/ce_ie_circ/redir.htm?circ_name=&apos; + Circuit_ID__c , Circuit_ID__c)
test:
HYPERLINK(&apos;http://dione1.gtsgroup.cz/ce_ie_circ/redir.htm?circ_name=&apos; + Circuit_ID__c , Circuit_ID__c)
prod:
HYPERLINK(&apos;http://dione1.gtsgroup.cz/idengine/ce_ie_circ/redir.htm?circ_name=&apos; + Circuit_ID__c , Circuit_ID__c)</description>
        <formula>HYPERLINK(&apos;http://dione1.gtsgroup.cz/idengine/ce_ie_circ/redir.htm?circ_name=&apos; + Circuit_ID__c , Circuit_ID__c)</formula>
        <inlineHelpText>Direct link to Circuit in OSS.</inlineHelpText>
        <label>Circuit ID Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Additional Comments related to Order Line</description>
        <inlineHelpText>Additional Comments related to Order Line</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commitment_Period__c</fullName>
        <description>Indicates what Commitment Period should be set for installed / modified Service</description>
        <inlineHelpText>Indicates what Commitment Period should be set for installed / modified Service</inlineHelpText>
        <label>Commitment Period</label>
        <picklist>
            <picklistValues>
                <fullName>Definite period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indefinite period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indefinite period with minimum period for using</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CommittedDeliveryDatePopupFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if for this Order Line reminder about empty Committed Delivery Date should be displayed</description>
        <inlineHelpText>Indicates if for this Order Line reminder about empty Committed Delivery Date should be displayed</inlineHelpText>
        <label>CDDPopupFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommittedDeliveryDatePopup__c</fullName>
        <description>When Provisioning Entry Date is set at Order CommittedDeliveryDatePopup__c at OrderLine is calculated as ProvisioningEntryDate__c + 10 business days</description>
        <inlineHelpText>Indicates Date and Time when reminder popup should be displayed if Commited Delivery Date is still empty  (10 days after Provisioning Entry Date)</inlineHelpText>
        <label>CDDPopup</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CommittedDeliveryDateSetDate__c</fullName>
        <description>Indicates when Committed Delivery Date was set</description>
        <inlineHelpText>Indicates when Committed Delivery Date was set</inlineHelpText>
        <label>CDDSD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CommittedDeliveryDate__c</fullName>
        <description>Committed Delivery Date</description>
        <inlineHelpText>CDD - Committed Delivery Date set manually by provisioning (PM), this date should lock after setting. If CDD is not provided 10 business days after Provisioning Entry Date, the popup notification is displayed to PM.</inlineHelpText>
        <label>Committed Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>Date when Order Line has been completed</description>
        <inlineHelpText>Date when Order Line has been completed</inlineHelpText>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Configured_Status_Date__c</fullName>
        <description>Date when the line has been configured for the first time</description>
        <inlineHelpText>Date when the line has been configured for the first time</inlineHelpText>
        <label>Configured Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Customer&apos;s Contact for B-End location (Lookup to Contact object)</description>
        <inlineHelpText>Customer&apos;s Contact for B-End location</inlineHelpText>
        <label>B End Contact (lookup)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Lines (B End Contact (lookup))</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Length_formula__c</fullName>
        <description>Contract Length taken from Related Contract</description>
        <formula>OrderLookup__r.CContract__r.ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Length taken from Related Contract</inlineHelpText>
        <label>Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_in_an_emergency_A__c</fullName>
        <description>Customer&apos;s Contact for A-End location, who should be notified in case of emergency</description>
        <inlineHelpText>Customer&apos;s Contact for A-End location, who should be notified in case of emergency</inlineHelpText>
        <label>Customer Contact in an emergency [A]</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Lines (Customer Contact in an emergency [A])</relationshipLabel>
        <relationshipName>Order_Lines7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_in_an_emergency__c</fullName>
        <description>Customer&apos;s Contact for B-End location, who should be notified in case of emergency</description>
        <inlineHelpText>Customer&apos;s Contact for B-End location, who should be notified in case of emergency</inlineHelpText>
        <label>Customer Contact in an emergency [B]</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Lines (Customer Contact in an emergency)</relationshipLabel>
        <relationshipName>Order_Lines3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_in_working_hours_A__c</fullName>
        <description>Customer&apos;s Contact for A-End location, who should be notified within working hours</description>
        <inlineHelpText>Customer&apos;s Contact for A-End location, who should be notified within working hours</inlineHelpText>
        <label>Customer Contact in an emergency [A]</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Lines (Customer Contact in an emergency [A])</relationshipLabel>
        <relationshipName>Order_Lines8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_in_working_hours__c</fullName>
        <description>Customer&apos;s Contact for B-End location, who should be notified within working hours</description>
        <inlineHelpText>Customer&apos;s Contact for B-End location, who should be notified within working hours</inlineHelpText>
        <label>Customer Contact in working hours [B]</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Lines (Customer Contact in working hours)</relationshipLabel>
        <relationshipName>Order_Lines4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_outside_working_hours_A__c</fullName>
        <description>Customer&apos;s Contact for A-End location, who should be notified outside working hours</description>
        <inlineHelpText>Customer&apos;s Contact for A-End location, who should be notified outside working hours</inlineHelpText>
        <label>Customer Contact outside working hrs [A]</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Lines (Customer Contact outside working hrs [A])</relationshipLabel>
        <relationshipName>Order_Lines9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_outside_working_hours__c</fullName>
        <description>Customer&apos;s Contact for B-End location, who should be notified outside working hours</description>
        <inlineHelpText>Customer&apos;s Contact for B-End location, who should be notified outside working hours</inlineHelpText>
        <label>Customer Contact outside working hrs [B]</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Lines (Customer Contact outside working hours)</relationshipLabel>
        <relationshipName>Order_Lines5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Expected_Delivery__c</fullName>
        <description>Date, when Customer expects the Service to be installed / updated</description>
        <inlineHelpText>Date, when Customer expects the Service to be installed / updated</inlineHelpText>
        <label>Customer Expected Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distance_Zone__c</fullName>
        <description>Distance Zone selected for this Order Line with the Configurator</description>
        <inlineHelpText>Distance Zone selected for this Order Line with the Configurator</inlineHelpText>
        <label>Distance Zone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <description>Number of related Contract document</description>
        <formula>CContract__r.Document_Number__c</formula>
        <inlineHelpText>Number of related Contract document</inlineHelpText>
        <label>Document Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Downloaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if data from CSR has been already downloaded and saved as orderComponents, orderGPs ...</description>
        <inlineHelpText>Marks the lines for which configuration has already been retrieved from CSR database</inlineHelpText>
        <label>Downloaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Assigned_Project_Manager_Phone__c</fullName>
        <description>Phone Number of Project Manager assigned to Order</description>
        <formula>OrderLookup__r.Assigned_Project_Manager__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Phone Number of Project Manager assigned to Order</inlineHelpText>
        <label>Email Assigned Project Manager Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Counter__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Counts number of e-mails sent from the Order Line</description>
        <inlineHelpText>Counts number of e-mails sent from the Order Line</inlineHelpText>
        <label>Email Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Customer_Address__c</fullName>
        <description>Address from Costomer assigned to the Order</description>
        <formula>OrderLookup__r.Account__r.ShippingStreet &amp; &quot;, &quot; &amp; OrderLookup__r.Account__r.ShippingCity &amp; &quot;, &quot; &amp; OrderLookup__r.Account__r.ShippingPostalCode &amp; &quot;, &quot; &amp; OrderLookup__r.Account__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Address from Costomer assigned to the Order</inlineHelpText>
        <label>Email Customer Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Customer_City__c</fullName>
        <description>City from Customer&apos;s Address</description>
        <formula>OrderLookup__r.Account__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>City from Customer&apos;s Address</inlineHelpText>
        <label>Email Customer City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Customer_Contact__c</fullName>
        <description>Customer&apos;s Contact (for emailing)</description>
        <inlineHelpText>Customer&apos;s Contact</inlineHelpText>
        <label>Email Customer Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Customer_Email__c</fullName>
        <description>Customer&apos;s Email Address</description>
        <inlineHelpText>Customer&apos;s Email Address</inlineHelpText>
        <label>Email Customer Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Customer_Name__c</fullName>
        <description>Customer&apos;s Name Taken from Account related to Order</description>
        <formula>OrderLookup__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer&apos;s Name Taken from Account related to Order</inlineHelpText>
        <label>Email Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Customer_Phone__c</fullName>
        <description>Customer&apos;s Phone Number</description>
        <inlineHelpText>Customer&apos;s Phone Number</inlineHelpText>
        <label>Email Customer Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Customer_Street__c</fullName>
        <description>Street of Customer&apos;s Address taken from Account related to Order</description>
        <formula>OrderLookup__r.Account__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Street of Customer&apos;s Address taken from Account related to Order</inlineHelpText>
        <label>Email Customer Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Supplier_Address__c</fullName>
        <description>Address taken from assigned Supplier</description>
        <formula>Supplier__r.ShippingStreet &amp; &quot;, &quot; &amp; Supplier__r.ShippingCity &amp; &quot;, &quot;&amp; Supplier__r.ShippingPostalCode &amp; &quot;, &quot; &amp; Supplier__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Address taken from assigned Supplier</inlineHelpText>
        <label>Email Supplier Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Supplier_Email__c</fullName>
        <description>Email Address of assigned Supplier&apos;s Contact</description>
        <formula>Suppliers_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Email Address of assigned Supplier&apos;s Contact</inlineHelpText>
        <label>Email Supplier Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Supplier_Phone__c</fullName>
        <description>Phone Number of Assigned Supplier</description>
        <formula>Supplier__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Phone Number of Assigned Supplier</inlineHelpText>
        <label>Email Supplier Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndBillingDate__c</fullName>
        <description>Date, when Billing should be stopped for disconnected service</description>
        <inlineHelpText>Date, when Billing should be stopped for disconnected service</inlineHelpText>
        <label>End Billing Date</label>
        <type>Date</type>
    </fields>
</CustomObject>